[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/Inventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/GameState.gd" type="Script" id=3]
[ext_resource path="res://scripts/ItemSpawnManager.gd" type="Script" id=4]
[ext_resource path="res://scripts/InventoryInputController.gd" type="Script" id=5]
[ext_resource path="res://scripts/ItemInformation.gd" type="Script" id=6]
[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/entities/Player.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 200, 5 )

[sub_resource type="CanvasItemMaterial" id=2]


[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
margin_right = 1020.0
margin_bottom = 40.0

[node name="Inventory" parent="CanvasLayer/UI" instance=ExtResource( 2 )]

[node name="GlobalControllers" type="Node" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="GlobalControllers"]
wait_time = 10.0
one_shot = true

[node name="GameState" type="Node" parent="GlobalControllers"]
script = ExtResource( 3 )

[node name="ItemSpawnManager" type="Node" parent="GlobalControllers"]
script = ExtResource( 4 )

[node name="InventoryInputController" type="Node" parent="GlobalControllers"]
script = ExtResource( 5 )

[node name="ItemInformation" type="Node" parent="GlobalControllers"]
script = ExtResource( 6 )

[node name="Floor" type="StaticBody2D" parent="." groups=[
"Environment",
]]
position = Vector2( -923.81, 599.713 )
scale = Vector2( 10, 1 )
collision_layer = 7
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Floor"]
margin_top = 2.0
margin_right = 400.0
margin_bottom = 12.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 200, 7 )
shape = SubResource( 1 )

[node name="TileMap" parent="." instance=ExtResource( 7 )]

[node name="Background" type="Node2D" parent="."]
z_index = -10

[node name="ColorRect" type="ColorRect" parent="Background"]
material = SubResource( 2 )
margin_left = -200.0
margin_top = -510.0
margin_right = 1850.0
margin_bottom = 700.0
color = Color( 0.27451, 0.733333, 0.980392, 0.576471 )

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 800, -370 )

[node name="PlayerCamera" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 2.5, 2.5 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false
editor_draw_drag_margin = true

